--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "3",
     "stylus": "*",
-    "jade": "*"
+    "jade": "*",
+    "jquery": "*"
+
   },
   "devDependencies": {
     "grunt": "*",
